[package]
name = "flibooks-es"
version = "0.2.0"
authors = ["alxeg <alx.egorov@gmail.com>"]

[dependencies]
elastic = "^0.20.10"
clap = { version = "3.1.10", features = ["derive", "cargo"] }
config = "^0.13.1"
futures = "^0.1.29"
futures-cpupool = "^0.1.8"
inflections = "1.1.1"
itertools = "0.10.3"
lazy_static = "^1.4.0"
log = "^0.4.16"
log4rs = "^1.0.0"
serde = "^1.0.136"
serde_derive = "^1.0.136"
serde_json = "^1.0.79"
tempfile = "^3.3.0"
tokio-core = "^0.1.18"
uuid = { version = "^1.0.0", features = ["serde", "v4"] }
zip = "^0.6.2"
walkdir = "^2.3.2"
jsonpath = "^0.1.1"

## serve dependencies
iron = "^0.6.1"
router = "^0.6.0"
bodyparser = "^0.8.0"
persistent = "^0.4.0"
