[package]
name = "flibooks-es"
version = "0.2.0"
authors = ["alxeg <alx.egorov@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
uuid = { version = "1.6", features = ["serde", "v4"] }
zip = "2.1"
base64 = { version = "0.21", features = ["std"] }
walkdir = "2.4"
serde_json = "1.0"
serde_json_path = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# serve dependencies
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# additional dependencies for serve
inflections = "1.1"
itertools = "0.13"
