[package]
name = "flibooks-es"
version = "0.2.0"
authors = ["alxeg <alx.egorov@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
lazy_static = "1.5"
log = "0.4"
log4rs = "1.3"
serde = { version = "1.0.210", features = ["derive"] }
tempfile = "3.14"
uuid = { version = "1.13", features = ["serde", "v4"] }
zip = "3.0"
base64 = { version = "0.22", features = ["std"] }
walkdir = "2.5"
serde_json = "1.0.135"
serde_json_path = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# serve dependencies
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# additional dependencies for serve
inflections = "1.1"
itertools = "0.14"
